--- a/docs/src/content/docs/setup/creating-workflows.mdx
+++ b/docs/src/content/docs/setup/creating-workflows.mdx
@@ -35,7 +35,7 @@ Follow these steps to create an agentic workflow using VSCode or your coding age
 
    If you haven't done so already, [set up your repository secrets](/gh-aw/reference/engines/) for the coding agent your workflow will be using (Copilot, Claude, Codex). Also need to adjust the `engine:` setting in your generated workflow to match if not using Copilot CLI.
 
-Optionally you can also install the [Custom Agent for Agentic Workflows](/gh-aw/reference/custom-agent/) by entering this into your coding agent:
+Optionally you can also add the [Custom Agent for Agentic Workflows](/gh-aw/reference/custom-agent/) to your repository by entering this into your coding agent:
 
 ```text wrap
 Initialize this repository for GitHub Agentic Workflows using https://github.com/github/gh-aw/blob/main/install.md
