--- a/docs/src/content/docs/setup/quick-start.mdx
+++ b/docs/src/content/docs/setup/quick-start.mdx
@@ -56,11 +56,11 @@ gh aw add-wizard githubnext/agentics/daily-repo-status
 
 This will take you through an interactive process to:
 
-1. **Check pre-requisttes** - Verify repository permissions and GitHub Actions is enabled
-2. **Select an AI Engine** - Choose between Claude, Copilot, or Codex
-3. **Set up required secrets** - e.g. [`COPILOT_GITHUB_TOKEN`, `ANTHROPIC_API_KEY` or `OPENAI_API_KEY`](/gh-aw/reference/engines/)
-4. **Add the workflow** - Copies the workflow [markdown file](/gh-aw/reference/workflow-structure/) to `.github/workflows/`
-5. **Trigger an initial run** - Starts the workflow immediately
+1. **Check pre-requisttes** - Verify repository permissions.
+2. **Select an AI Engine** - Choose between Copilot, Claude, or Codex.
+3. **Set up the required secret** - [`COPILOT_GITHUB_TOKEN`](/gh-aw/reference/tokens/#copilot-github-token), [`ANTHROPIC_API_KEY`](/gh-aw/reference/tokens/#anthropic-api-key) or [`OPENAI_API_KEY`](/gh-aw/reference/tokens/#openai-api-key).
+4. **Add the workflow** - Adds the workflow and lock file to `.github/workflows/`.
+5. **Optionally trigger an initial run** - Starts the workflow immediately.
 
 > [!TIP]
 > **Having trouble?** Check your [repository secrets](/gh-aw/reference/engines/), see the [FAQ](/gh-aw/reference/faq/) and [Common Issues](/gh-aw/troubleshooting/common-issues/).
